--- a/notebooks/dpo_trainer_test.ipynb
+++ b/notebooks/dpo_trainer_test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -13,72 +22,79 @@
     "import gc\n",
     "import os\n",
     "sys.path.append('..')\n",
-    "from train_trl import TrainerWrapper, WrapperConfig, LLAMA_3_2_1B, SMOL_LM_135M\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "from trl_wrapper.trainer_wrapper import TrainerWrapper, MOCK_LLAMA_CONFIG, WrapperConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-12-17 02:55:35.329\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m87\u001b[0m - \u001b[1mLoading model qgallouedec/tiny-LlamaForCausalLM-3\u001b[0m\n",
+      "The new embeddings will be initialized from a multivariate normal distribution that has old embeddings' mean and covariance. As described in this article: https://nlp.stanford.edu/~johnhew/vocab-expansion.html. To disable this, use `mean_resizing=False`\n",
+      "The new lm_head weights will be initialized from a multivariate normal distribution that has old embeddings' mean and covariance. As described in this article: https://nlp.stanford.edu/~johnhew/vocab-expansion.html. To disable this, use `mean_resizing=False`\n"
+     ]
+    }
+   ],
    "source": [
-    "from pathlib import Path\n",
-    "project_dir = os.path.abspath(os.path.join(\".\", os.pardir))\n",
-    "print(project_dir)\n",
-    "cfg = WrapperConfig(\n",
-    "    single_process_mode=True,\n",
-    "    model_id=LLAMA_3_2_1B,\n",
-    "    using_filtered_logprobs=False,\n",
-    "    root_dir=project_dir\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wrapper = TrainerWrapper(cfg)\n",
+    "wrapper = TrainerWrapper(MOCK_LLAMA_CONFIG)\n",
     "wrapper.init_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-12-17 02:55:45.108\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36msetup\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mLoading dataset for stage fit\u001b[0m\n",
+      "\u001b[32m2024-12-17 02:55:45.109\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36msetup\u001b[0m:\u001b[36m102\u001b[0m - \u001b[1mProcessing dataset for stage fit, workers: 12, cache dir dataset_caches/ultrafeedback\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-12-17 02:55:47.677\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mdataset.squad\u001b[0m:\u001b[36mload_dataset\u001b[0m:\u001b[36m261\u001b[0m - \u001b[1mLoaded dataset with 60917 samples\u001b[0m\n",
+      "Map (num_proc=12): 100%|██████████| 18000/18000 [00:02<00:00, 7772.28 examples/s] \n",
+      "Map (num_proc=12): 100%|██████████| 2000/2000 [00:02<00:00, 740.96 examples/s]\n",
+      "\u001b[32m2024-12-17 02:55:53.618\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36msetup\u001b[0m:\u001b[36m143\u001b[0m - \u001b[33m\u001b[1mComputed columns not found in dataset: ['source', 'prompt', 'chosen', 'chosen-rating', 'chosen-model', 'rejected', 'rejected-rating', 'rejected-model'] assuming using \u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "wrapper.init_data_module(False)"
+    "wrapper.init_data_module()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "wrapper.tokenizer.eos_token, wrapper.tokenizer.pad_token"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-12-17 02:56:04.805\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m184\u001b[0m - \u001b[1mInitializing DPOTrainer, with project name: codecontests-llama-3b, run_name: run-92235\u001b[0m\n",
+      "Extracting prompt from train dataset (num_proc=4): 100%|██████████| 18000/18000 [00:00<00:00, 27362.22 examples/s]\n",
+      "Applying chat template to train dataset (num_proc=4): 100%|██████████| 18000/18000 [00:02<00:00, 8128.53 examples/s] \n",
+      "Extracting prompt from eval dataset (num_proc=4): 100%|██████████| 2000/2000 [00:00<00:00, 10160.71 examples/s]\n",
+      "Applying chat template to eval dataset (num_proc=4): 100%|██████████| 2000/2000 [00:01<00:00, 1766.24 examples/s]\n",
+      "Tokenizing train dataset (num_proc=4):  69%|██████▉   | 12450/18000 [00:05<00:02, 2689.61 examples/s]"
+     ]
+    }
+   ],
    "source": [
     "wrapper.init_trainer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wrapper.model"
    ]
   },
   {
