switch to using ruff formatter

--- a/notebooks/clip_eval.ipynb
+++ b/notebooks/clip_eval.ipynb
@@ -29,11 +29,14 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
+    "\n",
     "def get_number_prefix(filename):\n",
     "    # Split the filename by non-digit characters\n",
-    "    parts = ''.join(filter(str.isdigit, filename))\n",
+    "    parts = \"\".join(filter(str.isdigit, filename))\n",
     "    # Convert the extracted digits to an integer\n",
     "    return int(parts) if parts else 0\n",
+    "\n",
     "\n",
     "def get_sorted_files(directory):\n",
     "    # Get a list of all files in the directory\n",
@@ -42,32 +45,43 @@
     "    sorted_files = sorted(files, key=get_number_prefix)\n",
     "    return sorted_files\n",
     "\n",
+    "\n",
     "def clip_encode_image(image_path):\n",
     "    # Load the image\n",
     "    img = Image.open(image_path)\n",
     "    image = preprocess(images=[img], return_tensors=\"pt\", padding=True)\n",
     "    image = {k: v.to(device) for k, v in image.items()}\n",
-    "    \n",
+    "\n",
     "    with torch.no_grad():\n",
     "        image_features = model.get_image_features(**image)\n",
-    "    \n",
+    "\n",
     "    return image_features\n",
+    "\n",
     "\n",
     "def calculate_clip_distance(image_path1, image_path2):\n",
     "    # Load the images\n",
     "    image_features1 = clip_encode_image(image_path1)\n",
     "    image_features2 = clip_encode_image(image_path2)\n",
-    "    \n",
+    "\n",
     "    # Normalize the features\n",
     "    image_features1 = image_features1 / image_features1.norm(dim=-1, keepdim=True)\n",
     "    image_features2 = image_features2 / image_features2.norm(dim=-1, keepdim=True)\n",
-    "    \n",
+    "\n",
     "    # Calculate the distance (cosine similarity)\n",
-    "    distance = 1 - torch.nn.functional.cosine_similarity(image_features1, image_features2)\n",
-    "    \n",
+    "    distance = 1 - torch.nn.functional.cosine_similarity(\n",
+    "        image_features1, image_features2\n",
+    "    )\n",
+    "\n",
     "    return distance.item()\n",
     "\n",
-    "sample_dirs = ['samples/samples_15', 'samples/samples_15_lq', 'samples/samples_mq', 'samples/samples_xl_lq', 'samples/samples_xl_lq_high_cfg']\n",
+    "\n",
+    "sample_dirs = [\n",
+    "    \"samples/samples_15\",\n",
+    "    \"samples/samples_15_lq\",\n",
+    "    \"samples/samples_mq\",\n",
+    "    \"samples/samples_xl_lq\",\n",
+    "    \"samples/samples_xl_lq_high_cfg\",\n",
+    "]\n",
     "sample_dir_files = [get_sorted_files(d) for d in sample_dirs]\n",
     "\n",
     "common_files = list(set(sample_dir_files[0]).intersection(*sample_dir_files))\n",
@@ -75,12 +89,12 @@
     "distances = []\n",
     "\n",
     "for i, file in enumerate(common_files):\n",
-    "    baseline_file = f'{sample_dirs[0]}/{file}'\n",
+    "    baseline_file = f\"{sample_dirs[0]}/{file}\"\n",
     "    distances_for_file = []\n",
     "    for j, sample_dir in enumerate(sample_dirs[1:]):\n",
-    "        sample_file = f'{sample_dir}/{file}'\n",
+    "        sample_file = f\"{sample_dir}/{file}\"\n",
     "        distance = calculate_clip_distance(baseline_file, sample_file)\n",
-    "        print(f'{i+1} {j+1} {file} {distance}')\n",
+    "        print(f\"{i+1} {j+1} {file} {distance}\")\n",
     "        distances_for_file.append(distance)\n",
     "    distances.append(distances_for_file)"
    ]
@@ -102,7 +116,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Calculate differences between baseline and sample values for each sample\n",
     "\n",
     "# Plotting\n",
@@ -110,12 +123,12 @@
     "for i in range(len(distances_np)):\n",
     "    plt.plot(distances_np[i], label=sample_dirs[i])\n",
     "\n",
-    "plt.title('Difference from Baseline for Samples')\n",
-    "plt.xlabel('Sample index')\n",
-    "plt.ylabel('CLIP distance')\n",
+    "plt.title(\"Difference from Baseline for Samples\")\n",
+    "plt.xlabel(\"Sample index\")\n",
+    "plt.ylabel(\"CLIP distance\")\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
