--- a/notebooks/codecontests_exploration.ipynb
+++ b/notebooks/codecontests_exploration.ipynb
@@ -22,6 +22,7 @@
     "from rich.console import Console\n",
     "import pandas as pd\n",
     "from enum import Enum\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -33,8 +34,15 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')\n",
-    "from evaluation.code_execution import evaluate_sample_exec, print_code_snippet, ProblemSource, Difficulty, Language"
+    "\n",
+    "sys.path.append(\"..\")\n",
+    "from evaluation.code_execution import (\n",
+    "    evaluate_sample_exec,\n",
+    "    print_code_snippet,\n",
+    "    ProblemSource,\n",
+    "    Difficulty,\n",
+    "    Language,\n",
+    ")"
    ]
   },
   {
@@ -124,7 +132,8 @@
     "        alL_solutions = [\n",
     "            solution_code\n",
     "            for lang_txt, solution_code in zip(\n",
-    "                sample[\"solutions\"][\"language\"], sample[\"solutions\"][\"solution\"] # type: ignore\n",
+    "                sample[\"solutions\"][\"language\"],\n",
+    "                sample[\"solutions\"][\"solution\"],  # type: ignore\n",
     "            )\n",
     "            if Language(lang_txt) == Language.PYTHON3\n",
     "        ]\n",
@@ -156,12 +165,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "for col in first_n_df.columns:\n",
-    "    if pd.api.types.is_object_dtype(first_n_df[col]) and isinstance(first_n_df[col].iloc[0], Enum):\n",
-    "        first_n_df[col] = first_n_df[col].apply(lambda x: x.value if isinstance(x, Enum) else x)\n",
+    "    if pd.api.types.is_object_dtype(first_n_df[col]) and isinstance(\n",
+    "        first_n_df[col].iloc[0], Enum\n",
+    "    ):\n",
+    "        first_n_df[col] = first_n_df[col].apply(\n",
+    "            lambda x: x.value if isinstance(x, Enum) else x\n",
+    "        )\n",
     "\n",
-    "Dataset.from_pandas(first_n_df).to_parquet(\"dataset_samples/codeforces_problems_subset.parquet\")"
+    "Dataset.from_pandas(first_n_df).to_parquet(\n",
+    "    \"dataset_samples/codeforces_problems_subset.parquet\"\n",
+    ")"
    ]
   },
   {
@@ -180,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.push_to_hub(\"codeforces_problems_subset\")\n"
+    "test_df.push_to_hub(\"codeforces_problems_subset\")"
    ]
   },
   {
@@ -269,7 +283,7 @@
     "            continue\n",
     "        print_code_snippet(solution_code, console)\n",
     "        n_printed += 1\n",
-    "    \n",
+    "\n",
     "    if n_printed > 5:\n",
     "        break"
    ]
