--- a/notebooks/cot_parsing_dev.ipynb
+++ b/notebooks/cot_parsing_dev.ipynb
@@ -66,6 +66,7 @@
     "\n",
     "n_with_steps = 0\n",
     "\n",
+    "\n",
     "def recursive_get_all_children(element, children_list):\n",
     "    if \"children\" in element:\n",
     "        for child in element[\"children\"]:\n",
@@ -73,6 +74,7 @@
     "    else:\n",
     "        children_list.append(element)\n",
     "    return children_list\n",
+    "\n",
     "\n",
     "out_rows = []\n",
     "\n",
@@ -127,13 +129,11 @@
     "                print(element)\n",
     "                continue\n",
     "            solution_code = element[\"raw\"]\n",
-    "        \n",
+    "\n",
     "        if solution_code is not None and len(thoughts) > 0:\n",
-    "            out_rows.append({\n",
-    "                \"problem\": problem_str,\n",
-    "                \"code\": solution_code,\n",
-    "                \"thoughts\": thoughts\n",
-    "            })\n",
+    "            out_rows.append(\n",
+    "                {\"problem\": problem_str, \"code\": solution_code, \"thoughts\": thoughts}\n",
+    "            )\n",
     "            break"
    ]
   },
