--- a/notebooks/dpo_analysis.ipynb
+++ b/notebooks/dpo_analysis.ipynb
@@ -181,7 +181,10 @@
     "from scipy.stats import shapiro, norm\n",
     "\n",
     "import os\n",
-    "scores_df = pd.read_parquet(os.path.expanduser('~/smolmodels/data/scored_sorted_logprobs.parquet'))\n",
+    "\n",
+    "scores_df = pd.read_parquet(\n",
+    "    os.path.expanduser(\"~/smolmodels/data/scored_sorted_logprobs.parquet\")\n",
+    ")\n",
     "scores_df.describe()"
    ]
   },
@@ -225,8 +228,12 @@
     "        \"mean_rejected_logits\",\n",
     "    ]\n",
     "]\n",
-    "scores_df['logprobs_diff'] = abs(scores_df['chosen_logps'] - scores_df['rejected_logps'])\n",
-    "scores_df['logits_diff'] = abs(scores_df['mean_chosen_logits'] - scores_df['mean_rejected_logits'])\n",
+    "scores_df[\"logprobs_diff\"] = abs(\n",
+    "    scores_df[\"chosen_logps\"] - scores_df[\"rejected_logps\"]\n",
+    ")\n",
+    "scores_df[\"logits_diff\"] = abs(\n",
+    "    scores_df[\"mean_chosen_logits\"] - scores_df[\"mean_rejected_logits\"]\n",
+    ")\n",
     "scores_df.hist(bins=100, figsize=(20, 10))"
    ]
   },
@@ -277,14 +284,20 @@
     "    print(f\"Shapiro-Wilk score: {stat}, p-value: {p}\")\n",
     "    print(f\"{col} mean: {mean}, std: {std}\")\n",
     "    pdf_bins = [10, 50, 90, 100]\n",
-    "    pdf_labels = ['10-50', '50-90', '90-100']\n",
-    "    percentile_bins = norm.ppf([x/100 for x in pdf_bins], loc=mean, scale=std)\n",
+    "    pdf_labels = [\"10-50\", \"50-90\", \"90-100\"]\n",
+    "    percentile_bins = norm.ppf([x / 100 for x in pdf_bins], loc=mean, scale=std)\n",
     "    print(f\"{col} 10th, 50th, 90th percentiles: {percentile_bins}\")\n",
-    "    scores_df[f\"{col}_percentile_idx\"] = pd.cut(scores_df[col], bins=percentile_bins, labels=pdf_labels, include_lowest=True, right=True)\n",
+    "    scores_df[f\"{col}_percentile_idx\"] = pd.cut(\n",
+    "        scores_df[col],\n",
+    "        bins=percentile_bins,\n",
+    "        labels=pdf_labels,\n",
+    "        include_lowest=True,\n",
+    "        right=True,\n",
+    "    )\n",
     "    axs[i].hist(scores_df[col], bins=100)\n",
-    "    axs[i].axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
-    "    axs[i].axvline(mean + std, color='r', linestyle='dashed', linewidth=1)\n",
-    "    axs[i].axvline(mean - std, color='r', linestyle='dashed', linewidth=1)\n",
+    "    axs[i].axvline(mean, color=\"r\", linestyle=\"dashed\", linewidth=1)\n",
+    "    axs[i].axvline(mean + std, color=\"r\", linestyle=\"dashed\", linewidth=1)\n",
+    "    axs[i].axvline(mean - std, color=\"r\", linestyle=\"dashed\", linewidth=1)\n",
     "    axs[i].set_title(col)"
    ]
   },
@@ -357,14 +370,20 @@
     "col = \"logprobs_diff\"\n",
     "mean, std = scores_df[col].mean(), scores_df[col].std()\n",
     "pdf_bins = [10, 50, 90, 100]\n",
-    "pdf_labels = ['10-50', '50-90', '90-100']\n",
-    "percentile_bins = norm.ppf([x/100 for x in pdf_bins], loc=mean, scale=std)\n",
+    "pdf_labels = [\"10-50\", \"50-90\", \"90-100\"]\n",
+    "percentile_bins = norm.ppf([x / 100 for x in pdf_bins], loc=mean, scale=std)\n",
     "print(f\"{col} 10th, 50th, 90th percentiles: {percentile_bins}\")\n",
-    "scores_df[f\"{col}_percentile_idx\"] = pd.cut(scores_df[col], bins=percentile_bins, labels=pdf_labels, include_lowest=True, right=True) # type: ignore\n",
+    "scores_df[f\"{col}_percentile_idx\"] = pd.cut(\n",
+    "    scores_df[col],\n",
+    "    bins=percentile_bins,\n",
+    "    labels=pdf_labels,\n",
+    "    include_lowest=True,\n",
+    "    right=True,\n",
+    ")  # type: ignore\n",
     "ax.hist(scores_df[col], bins=100)\n",
-    "ax.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
-    "ax.axvline(mean + std, color='r', linestyle='dashed', linewidth=1)\n",
-    "ax.axvline(mean - std, color='r', linestyle='dashed', linewidth=1)\n",
+    "ax.axvline(mean, color=\"r\", linestyle=\"dashed\", linewidth=1)\n",
+    "ax.axvline(mean + std, color=\"r\", linestyle=\"dashed\", linewidth=1)\n",
+    "ax.axvline(mean - std, color=\"r\", linestyle=\"dashed\", linewidth=1)\n",
     "ax.set_title(\"Histogram of per-sample logprob distances\")"
    ]
   },
@@ -404,7 +423,7 @@
     "\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=0)\n",
     "ax.set_xlabel(\"\")\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -427,7 +446,9 @@
     "eval_results_df_inverted = eval_results_df.copy()\n",
     "eval_results_df_inverted.set_index(\"name\", inplace=True)\n",
     "eval_results_df_inverted = eval_results_df_inverted.T\n",
-    "ax = eval_results_df_inverted.plot(kind=\"bar\", figsize=(10, 5), title=\"Code Eval Results\")\n",
+    "ax = eval_results_df_inverted.plot(\n",
+    "    kind=\"bar\", figsize=(10, 5), title=\"Code Eval Results\"\n",
+    ")\n",
     "\n",
     "ax.set_ylim(50, 75)\n",
     "# Customize the plot\n",
@@ -435,8 +456,8 @@
     "plt.ylabel(\"Score\")\n",
     "plt.legend(title=\"Models\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.expanduser('~/blog/blog/2024-11-28-dpo-pruning/eval_results.png'))\n",
-    "plt.show()\n"
+    "plt.savefig(os.path.expanduser(\"~/blog/blog/2024-11-28-dpo-pruning/eval_results.png\"))\n",
+    "plt.show()"
    ]
   },
   {
@@ -930,12 +951,18 @@
    ],
    "source": [
     "from IPython.display import display, Markdown\n",
+    "\n",
     "sampled_codecontests_df = pd.read_parquet(\"../data/codecontests_dpo.parquet\")\n",
-    "sampled_codecontests_df['logprobs_diff'] = abs(sampled_codecontests_df['chosen_logps'] - sampled_codecontests_df['rejected_logps'])\n",
-    "sampled_codecontests_df['logits_diff'] = abs(sampled_codecontests_df['mean_chosen_logits'] - sampled_codecontests_df['mean_rejected_logits'])\n",
-    "sampled_codecontests_df.sort_values('logprobs_diff', ascending=False, inplace=True)\n",
+    "sampled_codecontests_df[\"logprobs_diff\"] = abs(\n",
+    "    sampled_codecontests_df[\"chosen_logps\"] - sampled_codecontests_df[\"rejected_logps\"]\n",
+    ")\n",
+    "sampled_codecontests_df[\"logits_diff\"] = abs(\n",
+    "    sampled_codecontests_df[\"mean_chosen_logits\"]\n",
+    "    - sampled_codecontests_df[\"mean_rejected_logits\"]\n",
+    ")\n",
+    "sampled_codecontests_df.sort_values(\"logprobs_diff\", ascending=False, inplace=True)\n",
     "for i, sample in sampled_codecontests_df.tail(5).iterrows():\n",
-    "    print(sample['logprobs_diff'])\n",
+    "    print(sample[\"logprobs_diff\"])\n",
     "    display(Markdown(f\"### Sample {i}\"))\n",
     "    display(Markdown(f\"```python\\n{sample['chosen']}\\n```\"))\n",
     "    display(Markdown(f\"```python\\n{sample['rejected']}\\n```\"))"
