--- a/notebooks/dpo_trainer_dev.ipynb
+++ b/notebooks/dpo_trainer_dev.ipynb
@@ -18,7 +18,8 @@
     "import torch\n",
     "import sys\n",
     "import gc\n",
-    "sys.path.append('..')\n",
+    "\n",
+    "sys.path.append(\"..\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from trl_wrapper.trainer_wrapper import TrainerWrapper, WrapperConfig, SMOL_LM_135M"
@@ -45,7 +46,7 @@
     "    data_module_choice=\"evol_codealpaca_dpo\",\n",
     "    notebook_mode=True,\n",
     "    tuning_mode=\"sft\",\n",
-    "    eval_data_mode=\"fixed\"\n",
+    "    eval_data_mode=\"fixed\",\n",
     ")\n",
     "\n",
     "wrapper = TrainerWrapper(cfg)\n",
@@ -111,7 +112,7 @@
     }
    ],
    "source": [
-    "wrapper.data_module.train_dataset['conversations'][0]"
+    "wrapper.data_module.train_dataset[\"conversations\"][0]"
    ]
   },
   {
