--- a/notebooks/datacommons_exploration.ipynb
+++ b/notebooks/datacommons_exploration.ipynb
@@ -15,7 +15,7 @@
     "import requests\n",
     "\n",
     "d_vals = dotenv.dotenv_values(\"../.env\")\n",
-    "dc.set_api_key(d_vals['DC_API_KEY'])"
+    "dc.set_api_key(d_vals[\"DC_API_KEY\"])"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "    return response.json()\n",
     "\n",
     "\n",
-    "print('get states')\n",
+    "print(\"get states\")\n",
     "states = dc.get_places_in([usa], \"State\")[usa]\n",
     "vars = get_variables(states[0], d_vals[\"DC_API_KEY\"])"
    ]
